# msai-poc

./: .gitignore  README.md
pro-gen/: app.py  main.py  pyproject.toml  requirements.txt
