[project]
name = "pro-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.23.1",
    "azure-search-documents>=11.5.3",
    "azure-storage-blob>=12.26.0",
    "ipykernel>=6.30.0",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.0",
]
